# soroban-playground

./: .gitignore  .gitleaksignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  FREELANCER_IDENTITY.md  PR_DESCRIPTION.md  PR_REAL_ESTATE_TOKENIZATION.md  README.md  REIT_IMPLEMENTATION.md  STELLAR_GRANT_PITCH.md  SUPPLY_CHAIN.md  deploy_all.sh  deployed_contracts.txt  docker-compose.yml  package-lock.json  package.json  pr_body.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend-lint.yml  check-merge-conflicts.yml  codeql.yml  license-check.yml  secrets-scan.yml
.kilo/plans/: build-optimization-2026-06-12.md
backend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  TRACING.md  babel.config.cjs  cluster.js  ecosystem.config.cjs  eslint.config.js  jest.config.cjs  knexfile.js  package-lock.json  package.json  pm2.config.js  test-search.js
backend/eslint-rules/: no-unsafe-sql-literal.js
backend/migrations/: 002_job_marketplace.down.sql  002_job_marketplace.up.sql  003_voting_system.down.sql  003_voting_system.up.sql  V001__create_users_table.up.sql  V006__multi_tenant_isolation.down.sql  V006__multi_tenant_isolation.up.sql
backend/scripts/: dlq.js  seed.js
backend/src/: cleanupWorker.js  server.integration-guide.js  server.js  websocket.js
backend/test/: cloudStorage.test.js  compile.test.js  errorHandler.test.js
backend/tests/: admin.test.js  airdrop.test.js  apiVersioning.test.js  auth.e2e.test.js  batchSubmitter.test.js  buildSandbox.test.js  bullmqDlq.test.js  cacheInterceptor.test.js  cacheMiddleware.test.js  childProcessManager.test.js  compile.test.js  compileBatch.test.js  rbac.test.js  (+46 more)
contracts/: Cargo.toml  README.md
contracts/cloud-storage/: Cargo.toml
contracts/cloud-storage/src/: access.rs  errors.rs  events.rs  lib.rs  sharding.rs  storage.rs  tests.rs  types.rs
contracts/cloud-storage/tests/: integration.rs
contracts/subscription-manager/: Cargo.toml
contracts/subscription-manager/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/tokenized-reit/: Cargo.toml  README.md
contracts/tokenized-reit/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/warranty-management/: Cargo.toml
contracts/warranty-management/src/: lib.rs  storage.rs  test.rs  types.rs
docs/: SUBSCRIPTION_MANAGEMENT.md  token-airdrop.md
frontend/: babel.config.js  jest.config.js  next.config.ts  package-lock.json  package.json
scripts/: check-license.js  deploy-contract.sh
src/: config.rs  multi.rs  postgres.rs  sqlite.rs  trait.rs
(+583 files in other folders)
