[package]
name = "cloud-storage"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
test = true
doctest = false

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
