[package]
name = "soroban-tokenized-reit"
version = "0.1.0"
edition = "2021"
description = "Tokenized Real Estate Investment Trust (REIT) with dividend distribution on Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.6"

[dev-dependencies]
soroban-sdk = { version = "21.0.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
